# ha-mqtt-device-bridge

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: release-version-guard.yml
custom_components/ha_mqtt_device_bridge/: __init__.py  command.py  config_flow.py  const.py  diagnostics.py  fhem.py  manifest.json  mapping.py  options.py  runtime.py  services.yaml  slug.py  snapshot.py  strings.json
docs/: fhem-mqtt2-architecture.md
docs/examples/: miele-device-diagnostics.json  miele-template-export.json  overkiz-device-diagnostics.json  overkiz-template-export.json
fhem/: ha_mqtt_device_bridge.attrTemplate
tests/: __init__.py  conftest.py  test_command.py  test_config_flow.py  test_config_flow_import.py  test_diagnostics.py  test_diagnostics_redaction.py  test_example_fixtures.py  test_fhem_helpers.py  test_init.py  test_mapping.py  test_options.py  test_options_flow.py  test_runtime_mqtt.py
